--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
-    "singleQuote": true,
-    "semi": false,
-    "trailingComma": "es5",
-    "tabWidth": 2
-  }
+  "semi": true,
+  "trailingComma": "es5",
+  "singleQuote": false,
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "bracketSameLine": false
+}
