--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@nuxt/image": "^1.10.0",
     "@pinia/nuxt": "^0.11.3",
     "@vueuse/nuxt": "^13.4.0",
+    "dompurify": "^3.3.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "markdown-it": "^14.1.0",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.3",
     "swiper": "^11.2.8",
@@ -31,12 +33,14 @@
   "devDependencies": {
     "@iconify-json/mdi": "^1.2.3",
     "@nuxt/devtools": "^3.1.0",
+    "@types/dompurify": "^3.0.5",
     "@types/leaflet": "^1.9.21",
     "@types/leaflet.markercluster": "^1.5.6",
+    "@types/markdown-it": "^14.1.2",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.0",
     "prettier": "^3.5.3",
-    "sass": "^1.89.2",
-    "eslint": "^9.29.0"
+    "sass": "^1.89.2"
   }
 }
