--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet.markercluster": "^1.5.3",
     "markdown-it": "^14.1.0",
     "nuxt": "^4.2.1",
+    "nuxt-gtag": "^4.1.0",
     "pinia": "^3.0.3",
     "swiper": "^11.2.8",
     "vue": "^3.5.16",
