feat: add sitemap and robots configuration with multi-sitemap indexing and dynamic product routes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.14.0",
     "@nuxt/image": "^1.10.0",
+    "@nuxtjs/robots": "^5.6.7",
+    "@nuxtjs/sitemap": "^7.5.0",
     "@pinia/nuxt": "^0.11.3",
     "@vueuse/nuxt": "^13.4.0",
     "dompurify": "^3.3.0",
